Update public API adapter to v0.2.0
